--- a/html/index.html
+++ b/html/index.html
@@ -32,7 +32,7 @@
             </ul>
         </div>
         <div class="caixa">
-            <input type="text" id="txt" placeholder="Digite aqui sua pesquisa" style="color: white;" />
+            <input type="text" id="txt" alt= "Barra de pesquisa" placeholder="Digite aqui sua pesquisa" style="color: white;" />
             <div class="lupa">
                 <div class="lupa2">
                     <input type="image" src="lupa.png" style="max-width: 35px; max-height: 35px;" id = "pesquisa" />
