--- a/html/index.html
+++ b/html/index.html
@@ -23,8 +23,12 @@
 <body class="bode">
 
     <div class="conteiner">
-        <div><img class="logo" src="LogoTexas.png" alt="" height="146" width="150"></div>
-        <div class="login"><img src="chapeuzinho.png" alt=""></div>
+        <div>
+            <img class="logo" src="LogoTexas.png" alt="" height="146" width="150">
+        </div>
+        <div class="login">
+            <img src="chapeuzinho.png" alt="">
+        </div>
         <div>
             <ul class="Faca">
                 <li>Faça login ou</li>
@@ -35,18 +39,22 @@
             <input type="text" id="txt" alt= "Barra de pesquisa" placeholder="Digite aqui sua pesquisa" style="color: white;" />
             <div class="lupa">
                 <div class="lupa2">
-                    <input type="image" src="lupa.png" style="max-width: 35px; max-height: 35px;" id = "pesquisa" />
+                    <input type="image" src="lupa.png" alt = "Icon lupa" style="max-width: 35px; max-height: 35px;" id = "pesquisa" />
                 </div>
             </div>
         </div>
-        <div class="zap2"><img src="wpp.png" alt=""></div>
+        <div class="zap2">
+            <img src="wpp.png" alt="">
+        </div>
         <div>
             <ul class="zap">
                 <li>Atendimento</li>
                 <li class="num">43 9 9129-7732</li>
             </ul>
         </div>
-        <div class="carro"><img src="carrinho.png" alt="Imagem de um carrinho de compras"></div>
+        <div class="carro">
+            <img src="carrinho.png" alt="Imagem de um carrinho de compras">
+        </div>
     </div>
     <div class="conteinerP">
         <ul class="subir">
