--- a/html/index.html
+++ b/html/index.html
@@ -207,6 +207,7 @@
             <div class="adcPot"></div>
         </div>
         <script src="scriptjs.js"></script>
+        <div id="mensagemErro" class="erro"></div>
     </main>
     
 </body>
