--- a/html/index.html
+++ b/html/index.html
@@ -61,7 +61,9 @@
                             <img src="bota.png" alt="Logo de uma bota com bordas brancas" class="bota">
                         </a>
                     </div>
-                    <li class="oferta">COWGIRLS</li>
+                    <li class="oferta">
+                        <p>COWGIRLS</p>
+                    </li>
                 </li>
             </ul>
             <ul class="subir">
